--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -169,7 +169,7 @@
                                     <!-- Message -->
                                     <a href="#">
                                         <div class="user-img">
-                                            <img src="./assets/images/users/1.jpg" alt="user" class="img-circle" />
+                                            <img [src]="usuario.imagenUrl" alt="user" class="img-circle" />
                                             <span class="profile-status online pull-right"></span>
                                         </div>
                                         <div class="mail-contnet">
@@ -261,7 +261,7 @@
             aria-haspopup="true"
             aria-expanded="false"
             ><img
-              src="./assets/images/users/1.jpg"
+              [src]="usuario.imagenUrl"
               alt="user"
               class="profile-pic"
           /></a>
@@ -270,11 +270,13 @@
                             <li>
                                 <div class="dw-user-box">
                                     <div class="u-img">
-                                        <img src="./assets/images/users/1.jpg" alt="user" />
+                                        <img [src]="usuario.imagenUrl" alt="user" />
                                     </div>
                                     <div class="u-text">
-                                        <h4>Steave Jobs</h4>
-                                        <p class="text-muted">varun@gmail.com</p>
+                                        <h4>{{usuario.nombre}}</h4>
+                                        <p class="text-muted">
+                                            {{usuario.email |slice:0:20}}{{(usuario.email.length >20) ? '...': ''}}
+                                        </p>
                                         <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a
                     >
                   </div>
@@ -282,7 +284,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="ti-user"></i> My Profile</a>
+                <a routerLink="./perfil"><i class="ti-user"></i> My Profile</a>
                             </li>
                             <li>
                                 <a href="#"><i class="ti-wallet"></i> My Balance</a>
