--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,32 @@
     height: 200px;
     width: 200px;
 }
+
+.w100 {
+    width: 100px;
+}
+
+.w140 {
+    min-width: 140px;
+}
+
+.avatar {
+    border: 1px solid gray;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+}
+
+.fondo-modal-imagen {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: 999;
+}
+
+.oculto {
+    display: none;
+}
