--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,20 @@
     height: 50px;
 }
 
+.ficha {
+    border: 1px solid gray;
+    border-radius: 8%;
+    width: 150px;
+    height: 150px;
+}
+
+.hospital {
+    border: 1px solid gray;
+    border-radius: 100%;
+    width: 300px;
+    height: 300px;
+}
+
 .fondo-modal-imagen {
     background-color: rgba(0, 0, 0, 0.4);
     position: fixed;
