--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -60,15 +60,15 @@
             <!-- ============================================================== -->
             <!-- User profile and search -->
             <!-- ============================================================== -->
-            <ul class="navbar-nav my-lg-0">
+            <ul class="navbar-nav my-md-0">
                 <!-- ============================================================== -->
                 <!-- Search -->
                 <!-- ============================================================== -->
                 <li class="nav-item hidden-xs-down search-box">
                     <a class="nav-link hidden-sm-down waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i
           ></a>
-                    <form class="app-search">
-                        <input type="text" class="form-control" placeholder="Search & enter" />
+                    <form class="app-search" (ngSubmit)="buscar( txtTermino.value )">
+                        <input type="text" class="form-control" placeholder="Buscar médico, hospital o usuario" #txtTermino />
                         <a class="srh-btn"><i class="ti-close"></i></a>
                     </form>
                 </li>
