--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-<p>dashboard works!</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1 class="display-3 text-center">AdminPro es un ejemplo de App para administrar usuarios</h1>
+        <p class="text-center">Creado por Martín Bernal</p>
+
+
+        <ul>
+            <li>Se puede editar el perfil de usuario.</li>
+            <li>Diferentes opciones de visualización.</li>
+            <li>Crear Médicos y Hospitales.</li>
+            <li>Asignar Médicos a los diferentes Hospitales.</li>
+            <li>Cambiar las imágenes.</li>
+            <li>Realizar búsquedas de Usuarios, Médicos Y Hospitales.</li>
+
+        </ul>
+
+        <p class="text-center">Creado con Angular 10, Node.js, MongoDB, Bootstrap y Fontawesome
+        </p>
+
+    </div>
+</div>
