--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -21,7 +21,7 @@
         <!-- ============================================================== -->
         <!-- footer -->
         <!-- ============================================================== -->
-        <footer class="footer">© 2017 Admin Pro by wrappixel.com</footer>
+        <footer class="footer">© 2020 Admin Pro by Martín Bernal</footer>
         <!-- ============================================================== -->
         <!-- End footer -->
     </div>
