--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@
 
 .hospital {
     border: 1px solid gray;
-    border-radius: 100%;
+    border-radius: 5%;
     width: 300px;
     height: 300px;
 }
@@ -63,4 +63,8 @@
 
 .oculto {
     display: none;
+}
+
+.logoheader {
+    width: 50px;
 }
