--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
 <div class="jumbotron">
     <div class="container">
         <h1 class="display-3 text-center">AdminPro es un ejemplo de App para administrar usuarios</h1>
-        <p class="text-center">Creado por Martín Bernal</p>
+        <p class="text-center">Creado por Martín Bernal como proyecto del curso Angular Avanzado de Fernando Herrera.
+        </p>
 
 
         <ul>
@@ -14,8 +15,26 @@
 
         </ul>
 
-        <p class="text-center">Creado con Angular 10, Node.js, MongoDB, Bootstrap y Fontawesome
+        <p class="text-center userAdmin">Usuario administrador: "admintest@test.com" password: "123456"
         </p>
+        &nbsp;
+        <p class="text-center">Esta es una app de prueba, por favor no suba imágenes ofensivas.
+        </p>
+        <p class="text-center">Creado con Angular 10, Node.js, MongoDB, Bootstrap 4, Fontawesome y Chartjs.
+        </p>
+        <p class="text-center">
+            <a class="text-center" href="https://github.com/jobshimo/angular-adv-adminpro" target="_blanck">Link to
+                Frontend gitHub
+                proyect
+            </a>
+        </p>
+        <p class="text-center">
+            <a class="text-center" href="https://github.com/jobshimo/admin-pro-backend" target="_blanck">Link to Backend
+                gitHub
+                proyect
+            </a>
+        </p>
+
 
     </div>
 </div>
