--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,17 +1,19 @@
 <div class="row">
     <div class="col-6">
-        <app-dona title="Ventas"></app-dona>
+        <app-dona title="Usuarios Vs Medicos" [labels]="labels2" [data]="data2"> </app-dona>
     </div>
 
     <div class="col-6">
-        <app-dona title="Compras" [labels]="labels1" [data]="data1"> </app-dona>
+        <app-dona title="Médicos Vs Hospitales" [labels]="labels3" [data]="data3"> </app-dona>
+
     </div>
 
     <div class="col-6">
-        <app-dona title="Cambios"></app-dona>
+
+        <app-dona title="Usuarios Vs Hospitales" [labels]="labels4" [data]="data4"> </app-dona>
     </div>
 
     <div class="col-6">
-        <app-dona></app-dona>
+        <app-dona title="Total" [labels]="labels1" [data]="data1"> </app-dona>
     </div>
 </div>
