--- a/src/app/pages/mantenimientos/medicos/medico.component.html
+++ b/src/app/pages/mantenimientos/medicos/medico.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 animated fadeIn">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Médico</h4>
@@ -9,55 +9,56 @@
                     <div class="form-group row" *ngIf="medicoSeleccionado">
                         <label for="exampleInputuname3" class="col-sm-3 control-label">Foto</label>
                         <div class="col-sm-9">
-                            <div class="input-group">
+                            <div class="input-group animated fadeIn fast">
 
-                                <img class="ficha" [src]="medicoSeleccionado.img |imagen: 'medicos'" alt="">
+                                <img class="ficha cursor" [src]="medicoSeleccionado.img |imagen: 'medicos'" alt="" (click)="abrirModal(medicoSeleccionado)">
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-group row">
-                        <label for="exampleInputuname3" class="col-sm-3 control-label">Nombre</label>
-                        <div class="col-sm-9">
-                            <div class="input-group">
-                                <div class="input-group-addon"><i class="ti-user"></i></div>
-                                <input type="text" formControlName="nombre" class="form-control" id="exampleInputuname3" placeholder="Nombre del médico">
+                    <div class=" form-group row ">
+                        <label for="exampleInputuname3 " class="col-sm-3 control-label ">Nombre</label>
+                        <div class="col-sm-9 ">
+                            <div class="input-group ">
+                                <div class="input-group-addon "><i class="ti-user "></i></div>
+                                <input type="text " formControlName="nombre" class="form-control" id="exampleInputuname3" placeholder="Nombre del médico">
                             </div>
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label for="exampleInputEmail3" class="col-sm-3 control-label">Hoslpital</label>
-                        <div class="col-sm-9">
-                            <div class="input-group">
+                    <div class="form-group row ">
+                        <label for="exampleInputEmail3 " class="col-sm-3 control-label ">Hoslpital</label>
+                        <div class="col-sm-9 ">
+                            <div class="input-group ">
                                 <select formControlName="hospital" class="form-control">
                                     <option value="" >Seleccione Hospital</option>
-                                    <option *ngFor="let hospital of hospitales"
-                                     [value]="hospital._id" >{{ hospital.nombre }}</option>
+                                    <option *ngFor="let hospital of hospitales "
+                                     [value]="hospital._id " >{{ hospital.nombre }}</option>
                                     
                                 </select>
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-group row m-b-0">
-                        <div class="offset-sm-3 col-sm-9">
-                            <button type="submit" [disabled]="medicoForm.invalid" class="btn btn-success waves-effect waves-light">
+                    <div class="form-group row m-b-0 " *ngIf="this.usuarioService.role === 'ADMIN_ROLE'">
+                        <div class="offset-sm-3 col-sm-9 ">
+                            <button type="submit " [disabled]="medicoForm.invalid" class="btn btn-success waves-effect waves-light ">
                                 
-                                <i class="fa fa-save"></i>
+                                <i class="fa fa-save "></i>
                                 Guardar
                             </button>
+
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <div class="col animate fadeIn fast" *ngIf="hospitalSeleccionado">
-        <div class="card">
-            <div class="card-body text-center">
-                <h4 class="card-title">Hospital</h4>
-                <h6 class="card-subtitle">{{hospitalSeleccionado.nombre}}</h6>
-                <img class="hospital" [src]="hospitalSeleccionado.img | imagen: 'hospitales'" alt="">
+    <div class="col animate fadeIn " *ngIf="hospitalSeleccionado ">
+        <div class="card ">
+            <div class="card-body text-center ">
+                <h4 class="card-title ">Hospital</h4>
+                <h6 class="card-subtitle ">{{hospitalSeleccionado.nombre}}</h6>
+                <img class="hospital " [src]="hospitalSeleccionado.img | imagen: 'hospitales' " alt=" ">
             </div>
         </div>
     </div>
