--- a/src/app/pages/mantenimientos/medicos/medicos.component.html
+++ b/src/app/pages/mantenimientos/medicos/medicos.component.html
@@ -32,7 +32,7 @@
                         <h4 class="card-title">Médicos ({{ medicos.length }})</h4>
                         <h6 class="card-subtitle">Médicos registrados en mi aplicación</h6>
                     </div>
-                    <div class="col">
+                    <div class="col" *ngIf="this.usuarioService.role === 'ADMIN_ROLE'">
                         <div class="text-right">
                             <a routerLink="/dashboard/medico/nuevo" class="btn btn-primary">
                                 <i class="fa fa-hospital-o"></i> Crear Médico</a>
@@ -54,11 +54,14 @@
                         <tbody>
                             <tr *ngFor="let medico of medicos">
                                 <td class="text-center">
-                                    <img [src]="medico.img | imagen:'medicos'" [alt]="medico.nombre" class="avatar cursor" (click)="abrirModal(medico)">
+                                    <img [src]="medico.img | imagen:'medicos'" [alt]="medico.nombre" class="avatar" [class.cursor]="usuarioService.role === 'ADMIN_ROLE'" (click)="abrirModal(medico)">
                                 </td>
-                                <td>{{medico.nombre}}</td>
+                                <td [routerLink]="['/dashboard','medico', medico._id]" class="cursor decorar">
+                                    {{medico.nombre}}</td>
                                 <td class="text-nowrap text-center">
-                                    <a [routerLink]="['/dashboard','medico', medico._id]" data-toggle="tooltip" data-original-title="Editar"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
+                                    <a [routerLink]="['/dashboard','medico', medico._id]" data-toggle="tooltip" data-original-title="Editar"> <i class="fa fa-pencil text-inverse m-r-10"></i>
+                                    </a>
+                                    &nbsp;
                                     <a class="cursor" (click)="borrarMedico(medico)" data-toggle="tooltip" data-original-title="Borrar"> <i class="fa fa-close text-danger"></i> </a>
                                 </td>
                             </tr>
@@ -66,8 +69,7 @@
                         </tbody>
                     </table>
                 </div>
-                <!-- <button class="btn btn-secondary">Anterio</button> &nbsp;
-                <button class="btn btn-secondary">Siguiente</button> -->
+
 
             </div>
         </div>
