--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,10 +1,7 @@
-<!-- ============================================================== -->
-<!-- Left Sidebar - style you can find in sidebar.scss  -->
-<!-- ============================================================== -->
 <aside class="left-sidebar">
-    <!-- Sidebar scroll-->
+
     <div class="scroll-sidebar">
-        <!-- Sidebar navigation-->
+
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li class="user-profile">
@@ -20,31 +17,21 @@
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
                 <li *ngFor="let item of sidebarService.menu">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i [class]="item.icono"></i
-            ><span class="hide-menu"
-              >{{ item.title }}
+                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i [class]="item.icono"></i><span
+              class="hide-menu">{{ item.title }}
               <span class="label label-rouded label-themecolor pull-right">{{
                 item.submenu.length
-              }}</span></span
-            ></a
-          >
-          <ul aria-expanded="false" class="collapse">
-            <li *ngFor="let subMenuItem of item.submenu">
-              <a
-                [routerLink]="subMenuItem.url"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-                >{{ subMenuItem.title }}
+              }}</span></span></a>
+                    <ul aria-expanded="false" class="collapse">
+                        <li *ngFor="let subMenuItem of item.submenu">
+                            <a [routerLink]="subMenuItem.url" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">{{ subMenuItem.title }}
               </a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
-            </li>
-            </ul>
         </nav>
-        <!-- End Sidebar navigation -->
+
     </div>
-    <!-- End Sidebar scroll-->
+
 </aside>
-<!-- ============================================================== -->
-<!-- End Left Sidebar - style you can find in sidebar.scss  -->
-<!-- ============================================================== -->
